# reve

radar_ego_velocity_estimator/: CMakeLists.txt  package.xml
radar_ego_velocity_estimator/config/: params_awr1843.yaml
radar_ego_velocity_estimator/include/radar_ego_velocity_estimator/: data_types.hpp  math_helper.hpp  radar_body_velocity_estimator.hpp  radar_body_velocity_estimator_ros.hpp  radar_ego_velocity_estimator.hpp  radar_ego_velocity_estimator_config_ros.hpp  radar_ego_velocity_estimator_ros.hpp  radar_point_cloud.hpp  simple_profiler.hpp
radar_ego_velocity_estimator/launch/: demo_ti_mmwave_ego_velocity.launch.py
radar_ego_velocity_estimator/python/: velocity_estimation_evaluator.py
radar_ego_velocity_estimator/src/: odr.cpp  radar_body_velocity_estimator.cpp  radar_body_velocity_estimator_ros.cpp  radar_ego_velocity_estimator.cpp  radar_ego_velocity_estimator_ros.cpp  radar_point_cloud.cpp  simple_profiler.cpp
radar_ego_velocity_estimator/src/nodes/: radar_body_velocity_estimation_ros_node.cpp  radar_ego_velocity_estimation_ros_node.cpp
