<?xml version="1.0"?>
<package format="2">
    <name>radar_ego_velocity_estimator</name>
    <version>1.0.0</version>
    <description>The radar_ego_velocity_estimator package provides a least squares radar based ego and body velocity estimation.</description>

    <maintainer email="Christopher.Doer@kit.edu">Christopher Doer</maintainer>

    <license>GPLv3</license>

    <!-- <url type="website">http://wiki.ros.org/radar_ego_velocity_estimation</url> -->

    <author email="christopher.doer@kit.edu">Christopher Doer</author>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>angles</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>Eigen3</depend>
    <depend>tf2_eigen</depend>
    <depend>pcl</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
